@@ -2,11 +2,10 @@ package org.openas2.processor.receiver;
 
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.HashMap;
-import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
 
 import org.apache.commons.logging.Log;
@@ -15,7 +14,7 @@ import org.openas2.OpenAS2Exception;
 import org.openas2.Session;
 import org.openas2.message.Message;
 import org.openas2.params.InvalidParameterException;
-import org.openas2.util.IOUtilOld;
+import org.openas2.util.IOUtil;
 
 public abstract class DirectoryPollingModule extends PollingModule
 {
@@ -35,21 +34,35 @@ public abstract class DirectoryPollingModule extends PollingModule
 		try
 		{
 			outboxDir = getParameter(PARAM_OUTBOX_DIRECTORY, true);
-			IOUtilOld.getDirectoryFile(outboxDir);
+			IOUtil.getDirectoryFile(outboxDir);
 			errorDir = getParameter(PARAM_ERROR_DIRECTORY, true);
-			IOUtilOld.getDirectoryFile(errorDir);
+			IOUtil.getDirectoryFile(errorDir);
 			sentDir = getParameter(PARAM_SENT_DIRECTORY, false);
 			if (sentDir != null)
-				IOUtilOld.getDirectoryFile(sentDir);
-			String pendingInfoFolder = (String) getSession().getProcessor().getParameters().get("pendingmdninfo");
-            IOUtilOld.getDirectoryFile(pendingInfoFolder);
-			String pendingFolder = (String) getSession().getProcessor().getParameters().get("pendingmdn");
-            IOUtilOld.getDirectoryFile(pendingFolder);
+				IOUtil.getDirectoryFile(sentDir);
+            String pendingInfoFolder = getSession().getProcessor().getParameters().get("pendingmdninfo");
+            IOUtil.getDirectoryFile(pendingInfoFolder);
+            String pendingFolder = getSession().getProcessor().getParameters().get("pendingmdn");
+            IOUtil.getDirectoryFile(pendingFolder);
 
 		} catch (IOException e)
 		{
 			throw new OpenAS2Exception("Failed to initialise directory poller.", e);
 		}
+	}
+
+    @Override
+	public boolean healthcheck(List<String> failures)
+	{
+    	try
+		{
+			IOUtil.getDirectoryFile(outboxDir);
+		} catch (IOException e)
+		{
+			failures.add(this.getClass().getSimpleName() + " - Polling directory is not accessible: " + outboxDir);
+			return false;
+		}
+    	return true;
 	}
 
 	public void poll()
@@ -72,11 +85,11 @@ public abstract class DirectoryPollingModule extends PollingModule
 
 	protected void scanDirectory(String directory) throws IOException, InvalidParameterException
 	{
-		File dir = IOUtilOld.getDirectoryFile(directory);
+		File dir = IOUtil.getDirectoryFile(directory);
 		String extensionFilter = getParameter(PARAM_FILE_EXTENSION_FILTER, "");
 
 		// get a list of entries in the directory
-		File[] files = extensionFilter.length() > 0 ? IOUtilOld.getFiles(dir, extensionFilter) : dir.listFiles();
+		File[] files = extensionFilter.length() > 0 ? IOUtil.getFiles(dir, extensionFilter) : dir.listFiles();
 		if (files == null)
 		{
 			throw new InvalidParameterException("Error getting list of files in directory", this,
@@ -121,7 +134,6 @@ public abstract class DirectoryPollingModule extends PollingModule
 						logger.debug("Directory poller detected a non-writable file and will be ignored: " + file.getCanonicalPath());
 					} catch (IOException e)
 					{
-						// TODO Auto-generated catch block
 						e.printStackTrace();
 					}
 				}
@@ -130,64 +142,63 @@ public abstract class DirectoryPollingModule extends PollingModule
 		return false;
 	}
 
-	protected void trackFile(File file)
-	{
+    private void trackFile(File file)
+    {
 		Map<String, Long> trackedFiles = getTrackedFiles();
 		String filePath = file.getAbsolutePath();
 		if (trackedFiles.get(filePath) == null)
 		{
-			trackedFiles.put(filePath, new Long(file.length()));
-		}
+            trackedFiles.put(filePath, file.length());
+        }
 	}
 
-	protected void updateTracking()
-	{
+    private void updateTracking()
+    {
 		// clone the trackedFiles map, iterator through the clone and modify the
 		// original to avoid iterator exceptions
 		// is there a better way to do this?
 		Map<String, Long> trackedFiles = getTrackedFiles();
 		Map<String, Long> trackedFilesClone = new HashMap<String, Long>(trackedFiles);
 
-		for (Iterator<Map.Entry<String, Long>> it = trackedFilesClone.entrySet().iterator(); it.hasNext();)
-		{
-			// get the file and it's stored length
-			Map.Entry<String, Long> fileEntry = it.next();
-			File file = new File((String) fileEntry.getKey());
-			long fileLength = ((Long) fileEntry.getValue()).longValue();
+        for (Map.Entry<String, Long> fileEntry : trackedFilesClone.entrySet())
+        {
+            // get the file and it's stored length
+            File file = new File(fileEntry.getKey());
+            long fileLength = fileEntry.getValue().longValue();
 
 			// if the file no longer exists, remove it from the tracker
-			if (!checkFile(file))
-			{
-				trackedFiles.remove(fileEntry.getKey());
-			} else
-			{
-				// if the file length has changed, update the tracker
-				long newLength = file.length();
-				if (newLength != fileLength)
-				{
-					trackedFiles.put((String) fileEntry.getKey(), new Long(newLength));
-				} else
-				{
-					// if the file length has stayed the same, process the file
+            if (!checkFile(file))
+            {
+                trackedFiles.remove(fileEntry.getKey());
+            } else
+            {
+                // if the file length has changed, update the tracker
+		long newLength = file.length();
+                if (newLength != fileLength)
+                {
+                    trackedFiles.put(fileEntry.getKey(), Long.valueOf(newLength));
+                } else
+                {
+                    // if the file length has stayed the same, process the file
 					// and stop tracking it
-					try
-					{
-						processFile(file);
-					} catch (OpenAS2Exception e)
-					{
-						e.terminate();
-						try
-						{
-							IOUtilOld.handleError(file, errorDir);
-						} catch (OpenAS2Exception e1)
-						{
-							logger.error("Error handling file error for file: " + file.getAbsolutePath(), e1);
+                    try
+                    {
+                        processFile(file);
+                    } catch (OpenAS2Exception e)
+                    {
+                        e.terminate();
+                        try
+                        {
+                            IOUtil.handleError(file, errorDir);
+                        } catch (OpenAS2Exception e1)
+                        {
+                            logger.error("Error handling file error for file: " + file.getAbsolutePath(), e1);
 							forceStop(e1);
 							return;
 						}
-					} finally
-					{
-						trackedFiles.remove(fileEntry.getKey());
+                    } finally
+                    {
+                        trackedFiles.remove(fileEntry.getKey());
 					}
 				}
 			}
@@ -200,17 +211,17 @@ public abstract class DirectoryPollingModule extends PollingModule
 		if (logger.isInfoEnabled())
 			logger.info("processing " + file.getAbsolutePath());
 
-		try
+		try (FileInputStream in = new FileInputStream(file))
 		{
-			processDocument(new FileInputStream(file), file.getName());
+			processDocument(in, file.getName());
 			try
 			{
-				IOUtilOld.deleteFile(file);
+				IOUtil.deleteFile(file);
 			} catch (IOException e)
 			{
 				throw new OpenAS2Exception("Failed to delete file handed off for processing:" + file.getAbsolutePath(), e);
 			}
-		} catch (FileNotFoundException e)
+		} catch (IOException e)
 		{
 			throw new OpenAS2Exception("Failed to process file:" + file.getAbsolutePath(), e);
 		}
@@ -218,8 +229,8 @@ public abstract class DirectoryPollingModule extends PollingModule
 
 	protected abstract Message createMessage();
 
-	public Map<String, Long> getTrackedFiles()
-	{
+    private Map<String, Long> getTrackedFiles()
+    {
 		if (trackedFiles == null)
 		{
 			trackedFiles = new HashMap<String, Long>();
